reglage des bug suivants: scroll foireux, ancres cassees, overflow du texte et bug affichage du menu a ancres, ainsi que des choses mineures dont je ne me rappelle plus...

--- a/style/style_global.css
+++ b/style/style_global.css
@@ -1,31 +1,18 @@
+html , body {
+  position: absolute;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-color: #660000;
   font-size: 1.0em;
   color: white;
   background-attachment: fixed;
-  overflow-x: hidden;
-  margin: 0px;
   font-family: Verdana;
-  width: 100%;
-  height: 100%;
-}
-
-/********** scrollbar sous webkit uniquement **********/
-*::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
-  background-color: #660000;
-  border-radius: 5px;
-}
-
-*::-webkit-scrollbar {
-  width: 10px;
-  background-color: #660000;
-}
-
-*::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
-  background-color: #880000;
-  border-radius: 5px;
 }
 
 /********** en-tête **********/
@@ -36,6 +23,7 @@ header {
   margin: 0px;
   padding-left: 100px;
   width: 100%;
+  height: 60px;
   background-color: #990000;
   padding-bottom: 30px;
   z-index: 1000;
@@ -67,7 +55,7 @@ header a:visited {
   left: 10px;
   width: 50px;
   height: 50px;
-  z-index: 1002;
+  z-index: 1001;
   font-size: 50px;
   text-align: right;
   text-align: center;
@@ -88,9 +76,10 @@ article {
   margin-top: 100px;
   width: 50%;
   background-color: rgba(191, 0, 0, 0.5);
-  padding: 10px;
+  padding: 0.5em;
   border-radius: 0px 10px 0px 10px;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
+  word-break: break-word;
 }
 
 .titre_article {
@@ -125,7 +114,7 @@ article {
   }
   
   article {
-    width: 100%;
+    width: 98%;
 	margin-top: 30px;
 	border: none;
 	border-radius: 0px;
@@ -135,10 +124,11 @@ article {
 /********** contenu de la page **********/
 #page {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   margin: 0px;
-  padding: 80px 0px 0px 0px;
+  padding: 0px;
   transition-duration: 0.2s;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
@@ -154,6 +144,7 @@ footer {
   margin-bottom: 10px;
   color: #f5f5f5;
   font-size: 0.7em;
+  font-weight: bold;
 }
 
 /********** crane ascii **********/
