--- a/style/style_menus.css
+++ b/style/style_menus.css
@@ -58,7 +58,6 @@
   left: -300px;
   width: 300px;
   max-width: 300px;
-  z-index: 1001;
   height: 100%;
   border: none;
   background-color: rgba(0, 0, 0, 0.3);
@@ -146,7 +145,7 @@
 /********** menu liens ancres **********/
 #menu_anchors {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 180px;
   overflow: hidden;
 }
 
@@ -187,14 +186,14 @@
   }
   
   #menu_anchors {
-    margin-top: 30px;
+    margin-top: 120px;
 	max-height: 30px;
 	border: 3px solid white;
 	background-color: rgba(191, 0, 0, 0.5);
   }
 }
 
-@media screen and (max-width: 459px) {
+@media screen and (max-width: 600px) {
   #menu_anchors .jump {
     width: 100%;
 	height: 40px;
